remove outdated configuration and properties files; update README and add new service metadata

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,12 +1,12 @@
 import Cards from "../components/Cards";
 import TextRotator from "../components/textRotator";
 
-<strong style={{ color: '#CE6D13FF', fontSize: '60px' }}>Organisation_Management Documentation</strong>
+<strong style={{ color: '#CE6D13FF', fontSize: '60px' }}>ProductX Documentation</strong>
 
 <TextRotator />
 
 <Cards />
 
-Welcome to  the <strong>Organisation_Management</strong> 🎉! This API offers comprehensive management solutions for organizations and their agencies, streamlining operations through a robust set of functionalities.
+Welcome to  the <strong>ProductX</strong> 🎉! This API offers comprehensive management solutions for product and their variations, streamlining operations through a robust set of functionalities.
 
-This documentation covers endpoints for managing agencies, organizations, employees, customers, and more, ensuring efficient handling of information and enhancing overall organizational performance.
+This documentation covers endpoints for managing products, services, ressources, sale prices and more, ensuring efficient handling of information and enhancing overall organizational performance.
